[package]
name = "durable-ws-client"
version = "2.0.0"
authors = ["Douglas Gray <dbgray01@gmail.com>"]
edition = "2021"

[features]
default = ["tokio-tungstenite/default"]
connect = ["tokio-tungstenite/connect"]
native-tls = ["tokio-tungstenite/native-tls"]
native-tls-vendored = ["tokio-tungstenite/native-tls-vendored"]
rustls-tls-native-roots = ["tokio-tungstenite/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["tokio-tungstenite/rustls-tls-webpki-roots"]
webpki-roots = ["tokio-tungstenite/webpki-roots"]
webpki = ["tokio-tungstenite/webpki"]
tokio-rustls = ["tokio-tungstenite/tokio-rustls"]
native-tls-crate = ["tokio-tungstenite/native-tls-crate"]
rustls-native-certs = ["tokio-tungstenite/rustls-native-certs"]
tokio-native-tls = ["tokio-tungstenite/tokio-native-tls"]
rustls = ["tokio-tungstenite/rustls"]

[dependencies]
async-trait = "0.1.57"
futures = "0.3.24"
tokio = { version = "1.21.2", features = ["net", "sync", "time", "macros"] }
tokio-tungstenite = { version = "0.17.2" }
url = "2.3.1"

[dev-dependencies]
async-channel = "1.6"
tokio-stream = "0.1"
tokio-util = "0.6"
tokio = { version = "*", features = ["rt-multi-thread"] }