[package]
name = "durable-ws-client"
version = "3.0.0"
authors = ["Douglas Gray <dbgray01@gmail.com>"]
edition = "2021"

[features]
default = ["tokio-tungstenite/default"]
connect = ["tokio-tungstenite/connect"]
native-tls = ["tokio-tungstenite/native-tls"]
native-tls-vendored = ["tokio-tungstenite/native-tls-vendored"]
rustls-tls-native-roots = ["tokio-tungstenite/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["tokio-tungstenite/rustls-tls-webpki-roots"]
webpki-roots = ["tokio-tungstenite/webpki-roots"]
tokio-rustls = ["tokio-tungstenite/tokio-rustls"]
native-tls-crate = ["tokio-tungstenite/native-tls-crate"]
rustls-native-certs = ["tokio-tungstenite/rustls-native-certs"]
tokio-native-tls = ["tokio-tungstenite/tokio-native-tls"]
rustls = ["tokio-tungstenite/rustls"]

[dependencies]
async-trait = "0.1.74"
futures = "0.3.29"
tokio = { version = "1.35.0", features = ["net", "sync", "time", "macros"] }
tokio-tungstenite = { version = "0.21.0" }
url = "2.5.0"

[dev-dependencies]
tokio = { version = "1.25.0", features = ["rt-multi-thread"] }